[package]
name = "Neural_Network_Evolution_V1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
libm = "0.2.2"
serde_json = {version = "1.0.81"}
serde = {version = "1.0.137", default-features = false, features = ["derive", "serde_derive"]}
image = "0.24.3"
show-image = "0.12.3"
crossterm = "0.24.0"